--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "minimal-webpack-boilerplate",
   "version": "1.0.0",
   "description": "",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode=development",
